chore: removed old not-graded service, as it is not being used anymore
